# sidecar-calculations

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
scripts/: bundleRelease.sh  installDeps.sh  setupChroot.sh  teardownChroot.sh
sqlite-extension/: Makefile  calculations.c  calculations.h  sidecar-calculations  sidecar-calculations.h
src/: lib.rs
src/amazon_calculations/: mod.rs
src/math/: mod.rs
src/nile_calculations/: mod.rs
src/token_calculations/: mod.rs
tests/: amazon_tests.rs  math_tests.rs  nile_tests.rs  token_calculations_tests.rs
